# GeneralsGameCode

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Core/: CMakeLists.txt
Core/GameEngine/: CMakeLists.txt
Core/Libraries/: CMakeLists.txt
Core/Libraries/Include/Lib/: BaseTypeCore.h
Core/Libraries/Source/Compression/: CMakeLists.txt  Compression.h  CompressionManager.cpp
Core/Libraries/Source/Compression/LZHCompress/: NoxCompress.cpp  NoxCompress.h
Core/Libraries/Source/WWVegas/: CMakeLists.txt
Core/Libraries/Source/WWVegas/WW3D2/: intersec.cpp
Core/Libraries/Source/WWVegas/WWAudio/: AudioSaveLoad.cpp  SoundScene.cpp  WWAudio.cpp
Core/Libraries/Source/WWVegas/WWDebug/: CMakeLists.txt  wwdebug.h  wwhack.h  wwprofile.cpp
Core/Libraries/Source/WWVegas/WWLib/: CRC.H  Except.cpp  always.h  cpudetect.cpp  ffactory.cpp  mpu.cpp  multilist.cpp  refcount.cpp  registry.h  wwfile.cpp  wwstring.cpp
Core/Libraries/Source/WWVegas/WWMath/: CMakeLists.txt  cullsys.cpp  curve.cpp  matrix3d.cpp  matrix4.h  vehiclecurve.cpp  wwmath.cpp  wwmath.h
Core/Libraries/Source/WWVegas/WWSaveLoad/: CMakeLists.txt  definitionmgr.cpp  saveload.cpp  twiddler.cpp
Dependencies/dx8/: CMakeLists.txt
Generals/: CMakeLists.txt
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngine/Include/Common/: ActionManager.h  ArchiveFile.h  ArchiveFileSystem.h  AsciiString.h  AudioAffect.h  AudioEventInfo.h  AudioEventRTS.h  AudioHandleSpecialValues.h  AudioRequest.h  AudioSettings.h  BezFwdIterator.h  BitFlags.h  BitFlagsIO.h  BuildAssistant.h  CRCDebug.h  CopyProtection.h  CriticalSection.h  CustomMatchPreferences.h  DataChunk.h  Dict.h  DisabledTypes.h  DrawModule.h  Energy.h  Errors.h  FileSystem.h  FunctionLexicon.h  GameAudio.h  GameCommon.h  GameEngine.h  GameLOD.h  GameMemory.h  GameMemoryNull.h  GameMusic.h  GameSounds.h  GameSpyMiscPreferences.h  GameState.h  GameType.h  Geometry.h  GlobalData.h  INI.h  (+52 more)
Generals/Code/GameEngine/Include/GameClient/: Anim2D.h  AnimateWindowManager.h  CDCheck.h  CampaignManager.h  CommandXlat.h  ControlBar.h  ControlBarScheme.h  Credits.h  Diplomacy.h  DisconnectMenu.h  Display.h  DisplayString.h  DrawGroupInfo.h  Drawable.h  EstablishConnectionsMenu.h  Eva.h  ExtendedMessageBox.h  FontDesc.h  GUICallbacks.h  Gadget.h  GadgetCheckBox.h  GadgetComboBox.h  GadgetListBox.h  GadgetPushButton.h  GadgetRadioButton.h  GameClient.h  GameFont.h  GameInfoWindow.h  GameText.h  GameWindow.h  GameWindowManager.h  GameWindowTransitions.h  GlobalLanguage.h  HeaderTemplate.h  HotKey.h  IMEManager.h  InGameUI.h  KeyDefs.h  Keyboard.h  LanguageFilter.h  (+20 more)
Generals/Code/GameEngine/Include/GameClient/Module/: SwayClientUpdate.h
Generals/Code/GameEngine/Include/GameLogic/: AI.h  AIDock.h  AIGuard.h  AIPathfind.h  AIPlayer.h  AISkirmishPlayer.h  AIStateMachine.h  AITNGuard.h  ArmorSet.h  CaveSystem.h  CrateSystem.h  Damage.h  ExperienceTracker.h  GameLogic.h  GhostObject.h  Locomotor.h  LocomotorSet.h  Object.h  ObjectCreationList.h  ObjectIter.h  ObjectScriptStatusBits.h  ObjectTypes.h  PartitionManager.h  PolygonTrigger.h  ScriptActions.h  ScriptConditions.h  ScriptEngine.h  Scripts.h  SidesList.h  Squad.h  TerrainLogic.h  TurretAI.h  VictoryConditions.h  Weapon.h  WeaponSet.h  WeaponSetType.h  WeaponStatus.h
Generals/Code/GameEngine/Include/GameLogic/Module/: AIUpdate.h  ActiveBody.h  ActiveShroudUpgrade.h  ArmorUpgrade.h  AssaultTransportAIUpdate.h  AssistedTargetingUpdate.h  AutoDepositUpdate.h  AutoHealBehavior.h  BaikonurLaunchPower.h  BattlePlanUpdate.h  BehaviorModule.h  BodyModule.h  BoneFXDamage.h  BoneFXUpdate.h  BridgeBehavior.h  BridgeScaffoldBehavior.h  CashHackSpecialPower.h  CaveContain.h  CheckpointUpdate.h  ChinookAIUpdate.h  CleanupHazardUpdate.h  CollideModule.h  CommandSetUpgrade.h  ContainModule.h  ConvertToCarBombCrateCollide.h  ConvertToHijackedVehicleCrateCollide.h  CostModifierUpgrade.h  CrateCollide.h  CreateCrateDie.h  CreateModule.h  CrushDie.h  DamageModule.h  DefaultProductionExitUpdate.h  DefectorSpecialPower.h  DelayedUpgrade.h  DelayedWeaponSetUpgradeUpdate.h  (+110 more)
Generals/Code/GameEngine/Include/GameNetwork/: Connection.h  ConnectionManager.h  DisconnectManager.h  DownloadManager.h  FileTransfer.h  FirewallHelper.h  FrameData.h  FrameDataManager.h  GUIUtil.h  GameInfo.h  GameSpy.h  GameSpyChat.h  GameSpyGP.h  GameSpyGameInfo.h  GameSpyOverlay.h  GameSpyPersistentStorage.h  GameSpyThread.h  IPEnumeration.h  LANAPI.h  LANAPICallbacks.h  LANGameInfo.h  NAT.h  NetCommandList.h  NetCommandWrapperList.h  NetPacket.h  NetworkDefs.h  NetworkInterface.h  Transport.h  User.h  networkutil.h  udp.h
Generals/Code/GameEngine/Include/Precompiled/: PreRTS.h
Generals/Code/GameEngine/Source/Common/: CRCDebug.cpp  CommandLine.cpp  Dict.cpp  GameEngine.cpp  GameLOD.cpp  GlobalData.cpp  MessageStream.cpp  PartitionSolver.cpp  PerfTimer.cpp  Recorder.cpp  SkirmishBattleHonors.cpp  StateMachine.cpp  UserPreferences.cpp
Generals/Code/GameEngine/Source/GameClient/: Display.cpp  Drawable.cpp  Eva.cpp  FXList.cpp  GameClient.cpp  GameText.cpp  InGameUI.cpp  LanguageFilter.cpp  Line2D.cpp  MapUtil.cpp  SelectionInfo.cpp  VideoPlayer.cpp
Generals/Code/GameEngine/Source/GameNetwork/: Connection.cpp  ConnectionManager.cpp  DisconnectManager.cpp  DownloadManager.cpp  FileTransfer.cpp  FirewallHelper.cpp  FrameData.cpp  FrameDataManager.cpp  GUIUtil.cpp  GameInfo.cpp  GameSpy.cpp  GameSpyChat.cpp  GameSpyGameInfo.cpp  GameSpyOverlay.cpp  GameSpyPersistentStorage.cpp  LANAPI.cpp  LANAPICallbacks.cpp  LANAPIhandlers.cpp  LANGameInfo.cpp  NAT.cpp  NetCommandList.cpp  NetCommandWrapperList.cpp  NetMessageStream.cpp  NetPacket.cpp  Network.cpp  NetworkUtil.cpp  Transport.cpp  User.cpp  udp.cpp
Generals/Code/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Generals/Code/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Generals/Code/Libraries/Include/Lib/: BaseType.h
Generals/Code/Libraries/Source/WWVegas/: CMakeLists.txt
Generals/Code/Main/: CMakeLists.txt  RCa42596  WinMain.cpp
(+449 files in other folders)
